# cw7_DRF

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
main/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
